add each project github repo link

--- a/projects-new.html
+++ b/projects-new.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-3">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('./images/ss/chat-redux.png');">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('./images/ss/chat-redux.png'), background-size: auto;">
 
           <div class="card-description">
             <h2>Chat app</h2>
