--- a/projects.html
+++ b/projects.html
@@ -24,46 +24,47 @@
         <br>
 
         <div class="list-group list-group-flush <!-- overpass -->">
+
+
           <p class="text-center">
-          My latest project: <a href="http://goodreads.niamor.me/" target="_blank">Goodreads user's quotes scraper and API </a> source code: <a href="https://github.com/niam0r/goodreads-scraper" target="_blank">Github</a>
-        </p>
+          My latest project: <a href="http://goodreads.niamor.me/" target="_blank">Goodreads user's quotes scraper and API </a> | <a href="https://github.com/niam0r/goodreads-scraper" target="_blank"><i class="fab fa-github"></i> Github</a>
+          </p>
           <p>Projects built during Le Wagon's "Learn React & Redux" Course: </p>
           <ul>
             <!-- <li>
               <a href="https://niam0r.github.io/garage-redux/" target="_blank">Garage app</a>
             </li> -->
             <li>
-              <a href="https://niam0r.github.io/chat-redux/" target="_blank">Chat app</a>
+              <a href="https://niam0r.github.io/chat-redux/" target="_blank">Chat app</a> | <a href="https://github.com/niam0r/chat-redux" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
             <li>
-              <a href="https://niam0r.github.io/wagon-cities/" target="_blank">Le Wagon's cities</a>
+              <a href="https://niam0r.github.io/wagon-cities/" target="_blank">Le Wagon's cities</a> | <a href="https://github.com/niam0r/wagon-cities" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
             <li>
-              <a href="https://niam0r.github.io/react-flats/" target="_blank">Airbnb inspired places mapping app</a>
+              <a href="https://niam0r.github.io/react-flats/" target="_blank">Airbnb inspired places mapping app</a> | <a href="https://github.com/niam0r/react-flats" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
             <li>
-              <a href="https://niam0r.github.io/react-gifs/" target="_blank">Giphy "search and display" app</a>
+              <a href="https://niam0r.github.io/react-gifs/" target="_blank">Giphy "search and display" app</a> | <a href="https://github.com/niam0r/react-gifs" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
           </ul>
 
           <p>Projects built during Stephen Grider's Modern React with Redux Course:</p>
           <ul>
             <li>
-              <a href="https://niam0r-weather-app.herokuapp.com/" target="_blank">Weather app</a>
+              <a href="https://niam0r-weather-app.herokuapp.com/" target="_blank">Weather app</a> | <a href="https://github.com/niam0r/weather-app" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
             <li>
-              <a href="https://blog-niam0r.herokuapp.com/" target="_blank">Blog app</a>
+              <a href="https://blog-niam0r.herokuapp.com/" target="_blank">Blog app</a> | <a href="https://github.com/niam0r/blog-app" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
             <li>
-              <a href="https://niam0r-youtube-app.herokuapp.com/" target="_blank">Youtube app</a>
+              <a href="https://niam0r-youtube-app.herokuapp.com/" target="_blank">Youtube app</a> | <a href="https://github.com/niam0r/youtube-app" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
           </ul>
 
 
-
-          <a href="https://niam0r-catch-of-the-day.herokuapp.com/" target="_blank">Catch of the day app built with React</a>
-          <a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a>
-          <a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a>
+          <span><a href="https://niam0r-catch-of-the-day.herokuapp.com/" target="_blank">Catch of the day app built with React</a> | <a href="https://github.com/niam0r/catch-of-the-day" target="_blank"><i class="fab fa-github"></i> Github</a></span>
+          <span><a href="https://niam0r.github.io/airbnb-clone/" target="_blank">Airbnb clone built with React</a> | <a href="https://github.com/niam0r/airbnb-clone" target="_blank"><i class="fab fa-github"></i> Github</a></span>
+          <span><a href="https://niam0r.github.io/JavaScript30/" target="_blank">#JavaScript30 challenges</a> | <a href="https://github.com/niam0r/JavaScript30" target="_blank"><i class="fab fa-github"></i> Github</a></span>
         </div>
 
         <br>
@@ -73,16 +74,16 @@
             <li>
               <a href="http://larder.herokuapp.com/" target="_blank">
                 larder.herokuapp.com
-              </a>
+              </a> | <a href="https://github.com/niam0r/larder" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
             <li>
               <a href="https://devourfoodtours.herokuapp.com/" target="_blank">  devourfoodtours.herokuapp.com
-              </a>
+              </a> | <a href="https://github.com/niam0r/" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
             <li>
               <a href="https://maxcocktail.herokuapp.com/" target="_blank">
                 maxcocktail.herokuapp.com
-              </a>
+              </a> | <a href="https://github.com/niam0r/rails-mister-cocktail" target="_blank"><i class="fab fa-github"></i> Github</a>
             </li>
           </ul>
       </div>
