add goodreads link to project page

--- a/projects.html
+++ b/projects.html
@@ -118,6 +118,11 @@
           <i class="fab fa-twitter"></i> Twitter
         </a>
       </li>
+      <li>
+        <a href="https://goodreads.com/niam0r" target="_blank">
+          <i class="fab fa-goodreads-g"></i> Goodreads
+        </a>
+      </li>
     </ul>
   </div>
 
