get bonus points, fix larder.herokuapp.com link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!-- If you can read this you're a geek -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +13,6 @@
   <meta property="og:image" content="https://i.imgur.com/coo2KsX.png"/>
   <meta property="og:site_name" content="niamor.me"/>
   <!-- <meta property="og:description" content=""/> -->
-
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Overpass|Overpass+Mono:400,600,700" rel="stylesheet">
@@ -37,7 +36,7 @@
         <h1>ROMAIN HALLARY</h1>
         <h2>Full Stack Web Developer</h2>
         <p>
-          &emsp;&emsp;I attended Le Wagon London, a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://www.larder-recipes.co.uk" target="_blank">www.larder-recipes.co.uk</a>
+          &emsp;&emsp;I attended Le Wagon London, a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://larder.herokuapp.com/" target="_blank">www.larder-recipes.co.uk</a>
         </p>
         <p class="text-center">
           Since completing the course, I've honed my skills by adding features to the projects I built during the bootcamp. I've focused on developing my fluency in Ruby and JavaScript, alongside learning React.
