--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
         <h1>ROMAIN HALLARY</h1>
         <h2>Full Stack Web Developer</h2>
         <p>
+          &emsp;&emsp;I've always had a passion for craftsmanship and my attention to detail, willingness to learn and perseverance have allowed me to succeed in my different careers. I have always enjoyed team-working and I am excited about further collaboration in the future.
+        </p>
+        <p>
           &emsp;&emsp;I attended Le Wagon London, a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://larder.herokuapp.com/" target="_blank">www.larder-recipes.co.uk</a>
         </p>
-        <p class="text-center">
-          Since completing the course, I've honed my skills by adding features to the projects I built during the bootcamp. I've focused on developing my fluency in Ruby and JavaScript, alongside learning React.
+        <p>
+          &emsp;&emsp;Since I completed the course I've been practising my developer skills by adding more features to the projects I built during the bootcamp with a focus on becoming fluent with Ruby and learning more JavaScript and React.
         </p>
         <p class="text-center">
           <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> recruited me as a teaching assistant and I have been returning regularly to help current students.
