change larder.herokuapp.com link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           &emsp;&emsp;I've always had a passion for craftsmanship and my attention to detail, willingness to learn and perseverance have allowed me to succeed in my different careers. I have always enjoyed team-working and I am excited about further collaboration in the future.
         </p>
         <p>
-          &emsp;&emsp;I attended Le Wagon London, a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://larder.herokuapp.com/" target="_blank">www.larder-recipes.co.uk</a>
+          &emsp;&emsp;I attended Le Wagon London, a 9-week intensive coding bootcamp learning Ruby on Rails, JavaScript, HTML, CSS, SQL, git, GitHub, Heroku and Bootstrap. Where we designed, implemented and shipped to production a clone of AirBnB and a Rails prototype of  <a href="http://larder.herokuapp.com/" target="_blank">larder.herokuapp.com</a>
         </p>
         <p>
           &emsp;&emsp;Since I completed the course I've been practising my developer skills by adding more features to the projects I built during the bootcamp with a focus on becoming fluent with Ruby and learning more JavaScript and React.
