--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a> recruited me as a teaching assistant and I have been returning regularly to help current students.
         </p>
         <p class="text-center">
-          I'm currently working my way through exercism's Ruby and Javascript track, my solutions can be found here: <a href="https://github.com/niam0r/exercism" target="_blank">github.com/niam0r/exercism</a>
+          I like to keep challenging myself to become a more fluent developer,
+          I'm currently working my way through exercism.io and codewars.com problems, my solutions can be found here: <a href="https://github.com/niam0r/exercism" target="_blank">github.com/niam0r/exercism</a> and there: <a href="https://github.com/niam0r/codewars" target="_blank">github.com/niam0r/codewars</a>
         </p>
         <p class="text-center">
           My latest project: <a href="http://goodreads.niamor.me/" target="_blank">Goodreads user's quotes scraper and API </a> source code: <a href="https://github.com/niam0r/goodreads-scraper" target="_blank">Github</a>
