--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!-- If you can read this you're a geek -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Romain Hallary </title>
   <meta charset="utf-8">
 
-  <meta name="description" content="Romain Hallary | Full Stack Web Developper">
+  <meta name="description" content="Romain Hallary | Full Stack Web Developer">
   <meta name="keywords" content="Web, developer, full-stack ">
   <meta name="author" content="Romain Hallary">
 
-  <meta property="og:title" content="Romain Hallary | Full Stack Web Developper"/>
+  <meta property="og:title" content="Romain Hallary | Full Stack Web Developer"/>
   <meta property="og:image" content="https://i.imgur.com/coo2KsX.png"/>
   <meta property="og:site_name" content="niamor.me"/>
   <!-- <meta property="og:description" content=""/> -->
